fix_timeout/virtual-service-ratings-test-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
    - route:
      - destination:
          host: ratings
          subset: v1
      timeout: 0.002s
